# Lufus

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
flatpak/: io.github.lufus.Lufus.yml
packaging/: rufus-linux.spec
polkit/: io.github.lufus.Lufus.policy  org.rufuslinux.pkexec.policy
resources/: io.github.lufus.Lufus.desktop  io.github.lufus.Lufus.metainfo.xml  resources.qrc  rufus-linux.desktop
src/: main.cpp  test_iso.cpp
src/core/: bootloader.cpp  bootloader.h  device_manager.cpp  device_manager.h  disk_writer.cpp  disk_writer.h  iso_analyzer.cpp  iso_analyzer.h  partition_manager.cpp  partition_manager.h
src/ui/: mainwindow.cpp  mainwindow.h
